force-app/main/default/objects/Lease_OLM_Quote__c/Lease_OLM_Quote__c.object-meta.xml
<CustomObject>
    <label>Lease OLM Quote</label>
    <nameField>
        <label>Lease_OLM_Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease OLM Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>