force-app/main/default/objects/Lease_OLM_Quote__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease OLM Quotes</relationshipLabel>
    <relationshipName>Lease_OLM_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>