force-app/main/default/objects/Lease_OLM_Quote__c/fields/Equipment_Price__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Price__c</fullName>
    <label>Equipment Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>