force-app/main/default/objects/Lease_OLM_Quote__c/fields/Lease_Charges__c.field-meta.xml
<CustomField>
    <fullName>Lease_Charges__c</fullName>
    <label>Lease Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>