force-app/main/default/objects/Lease_OLM_Quote__c/fields/LS_Contract__c.field-meta.xml
<CustomField>
    <fullName>LS_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Populate this field when the new contract is created in cloud lending.</inlineHelpText>
    <label>LS Contract</label>
    <referenceTo>cllease__Lease_Account__c</referenceTo>
    <relationshipLabel>Lease_OLM_Quotes</relationshipLabel>
    <relationshipName>Lease_OLM_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>