force-app/main/default/objects/Lease_OLM_Quote__c/fields/Past_Due_Service__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_Service__c</fullName>
    <label>Past Due Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>