force-app/main/default/objects/Lease_OLM_Quote__c/fields/Quick_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote_Number__c</fullName>
    <label>Quick Quote Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>