force-app/main/default/objects/Lease_OLM_Quote__c/fields/Quote_Calculation_Description__c.field-meta.xml
<CustomField>
    <fullName>Quote_Calculation_Description__c</fullName>
    <label>Quote Calculation Description</label>
    <length>200</length>
    <type>Text</type>
</CustomField>