force-app/main/default/objects/Lease_OLM_Quote__c/fields/Quote_Message__c.field-meta.xml
<CustomField>
    <fullName>Quote_Message__c</fullName>
    <label>Quote Message</label>
    <length>200</length>
    <type>Text</type>
</CustomField>