force-app/main/default/objects/Lease_OLM_Quote__c/fields/Quote_Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Validity_Date__c</fullName>
    <label>Quote Validity Date</label>
    <type>Date</type>
</CustomField>