force-app/main/default/objects/Lease_OLM_Quote__c/fields/Remaining_Rental_Payments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Rental_Payments__c</fullName>
    <label>Remaining Rental Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>