force-app/main/default/objects/Lease_OLM_Quote__c/fields/Termination_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote_Type__c</fullName>
    <label>Termination Quote Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>