force-app/main/default/objects/Lease_OLM_Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract_Number__c</columns>
    <columns>Termination_Quote_Type__c</columns>
    <columns>Amount__c</columns>
    <columns>LS_Contract__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>